bat.bool1.sleepin.SleepIn.scala.error
Compilation error:
SleepIn:2: error: type mismatch;
 found   : Unit
 required: Boolean
def sleepIn(weekday: Boolean, vacation: Boolean): Boolean = {if (vacation) {return (true)}; if (weekday) {return (false)}} 
                                                                                            ^